--- a/loja/pom.xml
+++ b/loja/pom.xml
@@ -5,4 +5,19 @@
 	<groupId>br.com.alura</groupId>
 	<artifactId>loja</artifactId>
 	<version>1.0.0</version>
+	
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
+		<dependency>
+		    <groupId>com.thoughtworks.xstream</groupId>
+		    <artifactId>xstream</artifactId>
+		    <version>1.4.14</version>
+		</dependency>
+	</dependencies>
 </project>
